=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.21_03-dev

=item 1.21_02 - March 6, 2000

fix Makefile.PL if $USE_APXS && $PERL_DEBUG
[Daniel Jacobowitz <drow@false.org>]

force environ[] to be copied before any Perl code is loaded
[Daniel Jacobowitz <drow@false.org>]

localize $_ in Apache::send_cgi_header
[Roderick Schertler <roderick@argon.org>]

fix precedence problem in StatINC.pm
[Roderick Schertler <roderick@argon.org>]

if hash value has magicalness in <Perl>, invoke FETCH
thanks to Kevin Ruscoe for the spot

sync with 1.3.12's virtual_host section logic for httpd -S + <Perl>
thanks to Kevin Ruscoe for the spot

remove t/httpd symlink during 'make realclean' and when rebuilding
[Geoffrey Young <gyoung@laserlink.net>]

add Apache::src::otherldflags method
[Jens-Uwe Mager <jum@helios.de>]

backout modules/util validate_password tests, not everybody has crypt,
thanks to Randy Kobes and Ed Loehr for spotting

fix _AIX typo in dso_unload
[Jens-Uwe Mager <jum@helios.de>]

=item 1.21_01 - March 5, 2000

#ifdef _AIX, make sure Perl's dlclose is used, instead of Apache's
during dso_unload [Jens-Uwe Mager <jum@helios.de>]

__THE__ dso fix: dlclose() xs shared objects and call perl_shutdown()
before mod_perl's libperl.so is unloaded/reloaded by mod_so
[Daniel Jacobowitz <drow@false.org>, Alan Burlison <Alan.Burlison@uk.sun.com>]

add  /D "_MSWSOCK_" to ApacheModulePerl.dsp
[Randy Kobes <randy@theoryx5.uwinnipeg.ca>]

removed modules/sandwich test

Apache::RegistryBB returns DECLINED instead of FORBIDDEN if -d $r->finfo
[Sean Chittenden <sean.chittenden@auctia.com>]

add Apache::Util::validate_password(), as suggested by Christophe
Labouisse

call (void)perl_request_rec(r) asap, instead of waiting till the
response phase, e.g. so CGI.pm can be used before PerlHandler, without 
having to call Apache->request($r);
